<resources>
    <string name="app_name">testing</string>
    <string name="text">Main Activity Title</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logged">Logged</string>
    <string name="welcome">Welcome Back</string>
</resources>